Fix results footer alignment

--- a/source/stylesheets/pages/_results.scss
+++ b/source/stylesheets/pages/_results.scss
@@ -424,8 +424,6 @@ $gauge-hand-height: 8px;
 
 	@media screen and (min-width: breakpoint('tablet')) {
 		padding: $gutter;
-		margin-right: $gutter / -2;
-		margin-left: $gutter / -2;
 
 		text-align: right;
 	}
